Bug 362028 - CSV import makes edit entry window too wide
Summary: CSV import makes edit entry window too wide
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL: http://postimg.org/image/dkfmsf14n/
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-21 08:18 UTC by masterj2
Modified: 2016-05-04 02:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description masterj2 2016-04-21 08:18:50 UTC
After adding new fields and importing csv file (http://www18.zippyshare.com/v/MLLgYmOs/file.html) edit entry window becomes too wide. I'm using video game collection with these standard fields:
Title
Platform
Genre
Publisher
Developer
ESRB Rating
Description
Personal Rating
Cover
ID

And also these new fields:
Gamespot Rating (Simple Text)
Release (Simple Text)
URL (URL)
PS3CFW Compatible (Choice)
Youtube URL (URL)
Ignore (Checkbox)



tellico --version

Qt: 4.8.6
KDE Development Platform: 4.14.13
Tellico: 2.3.9

This is on gnome ubuntu 15.10

Reproducible: Always

Steps to Reproduce:
1. Delete some standard game collection fields, leaving only: Title, Platform, Genre, Publisher, Developer, ESRB Rating, Description, Personal Rating, Cover, ID, 
2. Add these new fields: Gamespot Rating (Simple Text), Release (Simple Text), URL (URL), PS3CFW, Compatible (Choice), Youtube URL (URL), Ignore (Checkbox)
3. Import CSV File from here: http://www18.zippyshare.com/v/MLLgYmOs/file.html (use | as delimeter when importing)
4. Open edit entry window

Actual Results:  
Edit entry window became wider than my monitor size.

Expected Results:  
Edit entry window width should be no wider than monitor width.

Application ALWAYS inserts into tellicorc these settings (besides usual things there):
[Edit Dialog Options]
Height 900=387
Width 1600=2525

As you see width is > than monitor width for some reason
Comment 1 Robby Stephenson 2016-05-04 02:42:57 UTC
Git commit e158e4e5d1dc3971783bd0865e4a5a7a507b65fa by Robby Stephenson.
Committed on 04/05/2016 at 02:40.
Pushed by rstephenson into branch 'master'.

Use elided text in Choice combo box to avoid overly wide dialog

Use 40% of screen width as maximum, eliding text in the middle. Change
to using QComboBox instead of KComboBox

The Entry Edit Dialog could still be too wide for the screen if the
label or other UI elements cause a change. I need to investigate the
appropriate use of QSizePolicy
FIXED-IN: 2.3.12

M  +4    -0    ChangeLog
M  +1    -1    src/detailedlistview.cpp
M  +0    -2    src/entryeditdialog.cpp
M  +29   -13   src/gui/choicefieldwidget.cpp
M  +3    -2    src/gui/choicefieldwidget.h

http://commits.kde.org/tellico/e158e4e5d1dc3971783bd0865e4a5a7a507b65fa
Comment 2 Robby Stephenson 2016-05-04 02:56:29 UTC
Git commit 7327bb58e2fefcd5e70735dcbfc49c9c410ff5d6 by Robby Stephenson.
Committed on 04/05/2016 at 02:56.
Pushed by rstephenson into branch '2.3'.

Use elided text in Choice combo box to avoid overly wide dialog

Use 40% of screen width as maximum, eliding text in the middle.

The Entry Edit Dialog could still be too wide for the screen if the
label or other UI elements cause a change. I need to investigate the
appropriate use of QSizePolicy
FIXED-IN: 2.3.12

Conflicts:
	ChangeLog
	src/gui/choicefieldwidget.cpp

M  +4    -0    ChangeLog
M  +1    -1    src/detailedlistview.cpp
M  +0    -2    src/entryeditdialog.cpp
M  +29   -10   src/gui/choicefieldwidget.cpp
M  +1    -0    src/gui/choicefieldwidget.h

http://commits.kde.org/tellico/7327bb58e2fefcd5e70735dcbfc49c9c410ff5d6